--- a/reactportfolio/package.json
+++ b/reactportfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://rjmurphy1922.github.io/ReactPortfolio",
   "name": "reactportfolio",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,4 +39,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
