updated package.json for heroku

--- a/reactportfolio/package.json
+++ b/reactportfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://rjmurphy1922.github.io/ReactPortfolio",
+  "homepage": "https://rjmurphy1922.herokuapp.com",
   "name": "reactportfolio",
   "version": "0.1.0",
   "private": true,
